--- a/Learning/Algorithm.tex
+++ b/Learning/Algorithm.tex
@@ -1,4 +1,6 @@
-\documentclass[../Master.tex]{subfiles}
+\providecommand{\master}{..}
+\documentclass[\master/Master.tex]{subfiles}
+
 \begin{document}
 
 In the following, we consider a general algorithm for learning in a virtual world. The algorithm bears resemblance to, and is derived from, the generally accepted scientific method, which can be summarized as follows:
