--- a/Master.tex
+++ b/Master.tex
@@ -55,12 +55,12 @@
 %==================================================================================================
 \def\thesisauthor{Søren Jacobsen and Jannick Johnsen}                     %Author
 \def\thesistitle{Action Learning in Automated Planning}               %Title
-\def\thesishandin{26-July}                       %Submission date (Day-Month}
+\def\thesishandin{26-June}                       %Submission date (Day-Month}
 \def\thesisdegree{M.Sc.}                              %Degree ('B.Eng', 'B.Sc.', 'M.Sc.' or 'PhD')
 \def\thesisyear{2015}                               %Submission year
 \def\thesisnumber{????}                             %DTU-IMM Serial number (do not include year)
 \def\thesisISSN{0000-0000}                          %ISSN number
-\def\thesiskeywords{Keywords are, comma separated}  %PDF keywords
+\def\thesiskeywords{}  %PDF keywords
 \derivethesisprops                                  %Derive dependent properties
 %
 %==================================================================================================
