--- a/NonConditional/Effects.tex
+++ b/NonConditional/Effects.tex
@@ -104,7 +104,7 @@ This is logically sound and gives us the following theorem:
 	\end{proof}
 \begin{example}[disproving effects in \texttt{move-h}] \label{ex:nca:moveSucceeded-disproving-effects}
 	In case the sokoban agent applies the action $\texttt{move-h}(t_1, t_2)$ in state $S_0$, the resulting state $S_1$ will have the visible effect that the sokoban relocated from $t_1$ to $t_2$. 
-	For the definition of action $\texttt{move-h}$ see \Cref{sec:pddl:ss:soko:ds}.
+	For the definition of action $\texttt{move-h}$ see \Cref{sec:SokobanPDDL}.
 	
 	
 	\begin{equation*}
