--- a/Implementation/ImplOverview.tex
+++ b/Implementation/ImplOverview.tex
@@ -11,8 +11,8 @@ Most of the algorithms and methods discussed in this thesis have been implemente
         The algorithm based on the scientific method (see Section~\ref{sec:Algorithm}) have been implemented, and the data structures it uses have been implemented in an abstract fashion, so that they may be used for wildly different domains. Especially, the PDDL-specificities discussed in Section~\ref{sec:PDDLAlgo} have been implemented to instatntiate the algorithm.
     \item[Optimistic and pessimistic strategies]
         Both the optimistic and the pessimistic strategies have been implemented specifically for PDDL.
-    \item[Internal planner] An bounded \texttt{A*} algorithm have been implemented, along with the framework necessary for working with a limited subset of first order logic (as specified by the PDDL framework, presented in Section~\ref{sec:PDDL}).
-    \item[External planner interface] A generic interface for invoking external planners is provided, and support for the \texttt{fast-downward} planner is enabled, given that it is preinstalled. See section~\ref{sec:disc:planning} for a discussion of the internal and external planning methods.
+    \item[Internal planner] An \texttt{A*} algorithm have been implemented, along with the framework necessary for working with a limited subset of first order logic (as specified by the PDDL framework, presented in Section~\ref{sec:app:pddl}).
+    \item[External planner interface] A generic interface for invoking external planners is provided, and support for the \texttt{fast-downward} planner is enabled, given that it is preinstalled.
     \item[PDDL parser and serializer]
         In order to communicate with external planners, a PDDL parser and serializer is provided. This also enables learning arbitrary partially known domains, given that they (as well as a sequence of problems) are provided as text files written in the PDDL language (see~\cite{PDDL} for a specification).
     \item[Sokoban environment]
