--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -27,36 +27,31 @@ The unit of the $y$-axis is number of atoms, and the marker $\lits_A$ denotes th
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-ek-move-v.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{move-v effects}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{move-v effects}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-ek-push-h.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-h effects}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-h effects}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-ek-push-v.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-v effects}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-v effects}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-ek-push-h-goal.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-h-goal effects}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-h-goal effects}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-ek-push-v-goal.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-v-goal effects}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-v-goal effects}
 \end{figure}
 
 \begin{figure}
@@ -68,35 +63,30 @@ The unit of the $y$-axis is number of atoms, and the marker $\lits_A$ denotes th
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-pk-move-v.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{move-v preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{move-v preconditions}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-pk-push-h.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-h preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-h preconditions}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-pk-push-v.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-v preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-v preconditions}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-pk-push-h-goal.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-h-goal preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-h-goal preconditions}
 \end{figure}
 
 \begin{figure}
     \centering
     \input{\master/Graphics/statistics2-pk-push-v-goal.pgf}
-        \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-v-goal preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-v-goal preconditions}
 \end{figure}
 \end{document}
