fixed more refs

--- a/Appendices/Hypergraph/HyperGraphMergingAlgorithm.tex
+++ b/Appendices/Hypergraph/HyperGraphMergingAlgorithm.tex
@@ -107,14 +107,14 @@ We will now turn our attention to the merging of edges. The intuitive approach (
             \centering
             \raisebox{-0.5\height}{\resizebox{\linewidth}{!}{\input{\master/Graphics/hgEx1_1.pgf}}}
 			\caption{$H_1$}
-            \label{fig:ex:ca:hgma:ex:generalization1}
+            \label{fig:ex:ca:hgma:ex:disconnected1}
         \end{subfigure}%
         \hfill%
         \begin{subfigure}{0.4\textwidth}
             \centering
             \resizebox{0.65\linewidth}{!}{\raisebox{-0.5\height}{\input{\master/Graphics/hgEx1_2.pgf}}}
             \caption{$H_2$}
-            \label{fig:ex:ca:hgma:ex:generalization2}
+            \label{fig:ex:ca:hgma:ex:disconnected2}
         \end{subfigure}
         \caption{Figure of hypergraphs for example~\ref{ex:ca:hgma:disconnected}.}\label{fig:ex:ca:hgma:ex:disconnected}
     \end{figure}
