--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -71,7 +71,7 @@ A thorough explanation of learning conditional effects using hypergraphs is give
         \caption{Path graph seen as a hypergraph.}
         \label{fig:ca:graphExHG}
     \end{subfigure}
-    \caption{Figure of hypergraphs for example~\ref{ex:ca:hgma:disconnected}.}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{Figure of hypergraphs for example~\ref{ex:ca:pathTrees}.}\label{fig:ex:ca:hgi}
 \end{figure}
 %
 %To summarize the our prior model for preconditions and effects we have the four following sets.
