--- a/Appendices/Hypergraph.tex
+++ b/Appendices/Hypergraph.tex
@@ -1,5 +1,5 @@
-\documentclass[..\Master.tex]{subfiles}
 \providecommand{\master}{..}
+\documentclass[../Master.tex]{subfiles}
 \begin{document}
 
 \section{Hyper graph construction from state}
