--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -32,9 +32,11 @@
 	The underlying truth is that we as logicians often think of preconditions as just that, conditions that must be satisfied in order for effects to happen, and while that is correct it would be more helpful to view them as patterns that allows for those effects.
 	Once we change our view of logic formulas, to one based on mathematical models --- such as our hypergraph model ---	then comprehension of the problem no longer seems overwhelming but rather a manageable challenge. 
 	
-	Why hypergraphs are so important to our solution, is that as a model it allows for nameless variables in the atoms. 
-	In normal first order logic nameless variables are not a particularly attractive feature, 
-	however as a knowledge description it allows us to compare two conditionals in a simplified manner.
+%	Why hypergraphs are so important to our solution, is that as a model it allows for nameless variables in the atoms. 
+%	In normal first order logic nameless variables are not a particularly attractive feature, 
+%	however as a knowledge description it allows us to compare two conditionals in a simplified manner.
+	
+	The hypergraph optimization that we have worked on adds the feature of combining many connecting paths that are overlapping into one single graph, which space complexity is not intractable.
 	
 	The problem currently with hypergraph model is that we have not solved the problem of isomorphic subgraphs (or subgraph matching) in the hypergraphs, 
 	this is especially a problem for our merging algorithm (see \Cref{algo:hypergraphmerge}) as it currently have no prevention of these.
