--- a/Discussion.tex
+++ b/Discussion.tex
@@ -19,14 +19,14 @@ In conclusion, lifting the restrictions we have imposed would allow for easier r
 \section{Space complexity of non-condition action learning algorithm}
 \subfile{Discussion/SpaceComplexity}
 
-\section{Missing: Advantage/disadvantage of negative goals solution}
-
-\section{Missing: Solving Hypergraph Collapsing problem}
-
-\section{Missing: Thoughts on Simulation}
-
-\section{Discussion of Results}\label{sec:disc:results}
-   \subfile{Discussion/DiscussionOfResults}
+% \section{Missing: Advantage/disadvantage of negative goals solution}
+%
+% \section{Missing: Solving Hypergraph Collapsing problem}
+%
+% \section{Missing: Thoughts on Simulation}
+%
+% \section{Discussion of Results}\label{sec:disc:results}
+%    \subfile{Discussion/DiscussionOfResults}
 %
 %\section{Planning}\label{sec:disc:planning}
 %    \subfile{Discussion/Planning}
