--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,12 +1,12 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
 
-	In the beginning we raised the question what does it mean to learn?, we then defined learning as the acquisition of knowledge, 
-	however we would not define an agent that merely remembers all transition it has observed as a learning agent,
-	instead we believe that a learning agent must also be able to infer new knowledge from its observations.
-	These ideas are based on the scientific method, which is why we used that as a foundation for our general learning algorithm(see \Cref{algo:science}). 
-	Separate to learning is the concept of achieving situation that may accommodate learning, referred to as a learning strategy.
-	While not learning itself strategies are essential to the discussion of learning as it limits what we may be able to learn. 
+Throughout this thesis, we have explored the concepts of learning, including different methods for obtaining knowledge, strategies that guide the selection of actions, as well as different domain models that can be learned from.
+
+We have shown that these concepts can be implemented by an algorithmization of the scientific method, from which we inherit the idea of experimenting to obtain data that can then be analysed to distill facts and falsities.
+
+	Separate to the act of obtaining knowledge from observations is the concept of achieving situations that may accommodate learning, referred to as a learning strategy.
+	Strategies are essential to the discussion of learning, 
 	It is also an unavoidable feature of any intelligent agent, since that not having a strategy is a strategy itself. 
 
 
